➕ Added jaxb dependencies